err/swagger-py-codegen.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/dpath'...
Listing './lib/python3.5/site-packages/dpath-1.4.0.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/swagger_py_codegen'...
Listing './lib/python3.5/site-packages/swagger_py_codegen/templates'...
Listing './lib/python3.5/site-packages/swagger_py_codegen/templates/falcon'...
Listing './lib/python3.5/site-packages/swagger_py_codegen/templates/flask'...
Listing './lib/python3.5/site-packages/swagger_py_codegen/templates/jsonschema'...
Listing './lib/python3.5/site-packages/swagger_py_codegen/templates/sanic'...
Listing './lib/python3.5/site-packages/swagger_py_codegen/templates/tornado'...
Listing './lib/python3.5/site-packages/swagger_py_codegen/templates/ui'...
Listing './lib/python3.5/site-packages/swagger_py_codegen/templates/ui/css'...
Listing './lib/python3.5/site-packages/swagger_py_codegen/templates/ui/fonts'...
Listing './lib/python3.5/site-packages/swagger_py_codegen/templates/ui/images'...
Listing './lib/python3.5/site-packages/swagger_py_codegen/templates/ui/lang'...
Listing './lib/python3.5/site-packages/swagger_py_codegen/templates/ui/lib'...
Listing './lib/python3.5/site-packages/swagger_py_codegen-0.2.9.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
